@@ -46,12 +46,15 @@ S3method(print, panelmodel)
 S3method(residuals, panelmodel)
 S3method(residuals, plm)
 S3method(fitted, panelmodel)
-S3method(predict, panelmodel)
 S3method(df.residual, panelmodel)
 S3method(vcov, panelmodel)
 #plm
 S3method(summary, plm)
 S3method(print, summary.plm)
+S3method(predict, plm)
+#plm.list
+S3method(summary, plm.list)
+S3method(print, summary.plm.list)
 #pgmm
 S3method(coef, pgmm)
 S3method(summary, pgmm)
