@@ -12,12 +12,22 @@ sargan(object, weights = c("twosteps", "onestep"))
 }
 
 \arguments{
+<<<<<<< .mine
+  \item{object}{an object of class \code{"pgmm"},}
+  \item{weights}{the weighting matrix to be used for the computation of
+  the test.}
+=======
   \item{object}{an object of class \code{"pgmm"}.}
   \item{weights}{}
+>>>>>>> .r87
 }
 
-\details{
-The Hansen--Sargan test calculates the quadratic form of the moment restrictions that is minimized while computing the GMM estimator. It follows asymptotically a chi-square distribution with number of degrees of freedom equal to the difference between the number of moment conditions and the number of coefficients.
+\details{  
+The Hansen--Sargan test calculates the quadratic form of the moment
+restrictions that is minimized while computing the GMM estimator. It
+follows asymptotically a chi-square distribution with number of degrees
+of freedom equal to the difference between the number of moment
+conditions and the number of coefficients.
 }
 
 \value{
